[project]
name = "gpt4o-sandbox"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "TakahiroHirata", email = "takakun47@gmail.com" }]
dependencies = [
    "openai>=1.31.1",
    "azure-identity>=1.16.0",
    "pydantic>=2.7.3",
    "pydantic-settings>=2.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.10.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gpt4o_sandbox"]

[tool.mypy]
plugins = "pydantic.mypy"
